B&L QA/objects/Account_Customer_Group__c.object
<CustomObject>
    <description>EMEA. Information on the account.</description>
    <fields>
        <fullName>Account__c</fullName>
        <description>Account to which the customer group applies.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Customer Groups</relationshipLabel>
        <relationshipName>Account_Customer_Groups</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Customer_Group_Type__c</fullName>
        <description>Group type (i.e. PRC)</description>
        <label>Customer Group Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Group__c</fullName>
        <description>Account customer group value.</description>
        <label>Customer Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Full description of the customer group code</description>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Account Customer Group</label>
    <nameField>
        <displayFormat>AccCustomerGroup-{0000000}</displayFormat>
        <label>Account Customer Group Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Customer Groups</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>